--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,9 @@
 %\widowpenalty=10000
 %\clubpenalty=10000
 %% colors
+
 \usepackage[usenames,dvipsnames]{xcolor}
+\definecolor{dollarbill}{rgb}{0.52, 0.73, 0.4}%reworking
 \definecolor{antiquefuchsia}{rgb}{0.57, 0.36, 0.51}
 \definecolor{violetw}{rgb}{0.93, 0.51, 0.93}
 \definecolor{Veronica}{rgb}{0.63, 0.36, 0.94}
@@ -21,7 +23,7 @@
 \definecolor{brightcerulean}{rgb}{0.11, 0.67, 0.84}
 \definecolor{cadmiumorange}{rgb}{0.93, 0.53, 0.18}
 \definecolor{ochre}{rgb}{0.8, 0.47, 0.13}
-\definecolor{midnightblue}{rgb}{0.1, 0.1, 0.44}
+\definecolor{midnightblue}{rgb}{0.1, 0.1, 0.44}%workout
 \definecolor{grey}{rgb}{0.7, 0.75, 0.71}
 \definecolor{bf}{RGB}{88, 86, 88}
 \definecolor{bb}{RGB}{177, 177, 177}
@@ -94,6 +96,9 @@
 \begin{document}
 \maketitle
 \pagenumbering{roman}
+\ifx\versione\bozza
+\reworkingc
+\fi
 \tableofcontents*
 \mainmatter
 \pagenumbering{arabic}
