--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 %% colors
 
 \usepackage[usenames,dvipsnames]{xcolor}
+\definecolor{candyapplered}{rgb}{1.0, 0.03, 0.0}
 \definecolor{dollarbill}{rgb}{0.52, 0.73, 0.4}%reworking
 \definecolor{antiquefuchsia}{rgb}{0.57, 0.36, 0.51}
 \definecolor{violetw}{rgb}{0.93, 0.51, 0.93}
