--- a/appendice.tex
+++ b/appendice.tex
@@ -1,5 +1,49 @@
 \chapter{Interazione disco-pianeta}
 
+\begin{reworking}{Fenomeni che causano migrazione}
+	
+{Evoluzione orbite proto-pianeti: migrazione planetaria.}
+
+\begin{wrapfigure}[10]{l}{0.5\textwidth}
+	\includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{pdres}
+	\caption{Simulazione evoluzione orbite planetarie in disco di accrescimento fino a cattura in risonanza $2:1$: le regioni pi\'u dense sono in rosso. Da \cite{kley2012planet}.}\label{fig:pdres}
+\end{wrapfigure}
+
+L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, per cui sembra improbabile una formazione in loco, e la presenza di sistemi multipli in risonanza sono indicatori di evoluzione orbitale, d'altra parte nel Sistema solare fenomeni di migrazione fornisco una spiegazione all'orbita di plutone, alla presenza di numerosi oggetti della fascia di Kuiper in risonanza $3:2$ con Nettuno e al periodo di collisioni intense testimoniato da craterizzazione (Late heavy bombardment).
+
+\vspace{1.5cm}
+
+Fenomeni che possono dar luogo a migrazione planetaria:
+\begin{itemize}
+	\item Interazione con disco proto-planetario. Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione. Velocit\'a edirezione della migrazione dipendono dalle caratteristiche del disco, massa del pianeta e moto relativo pianeta-gas.
+	
+	
+	\begin{errata}[Elenco schematicamente alcuni risultati da \cite{armitage2007lecture} e \cite{crida2006planetary}]
+		La migrazione di tipo I ha tempi caratteristici
+		\begin{equation}
+		\tau_I\propto\frac{M_p}{\Gamma}\propto M_p\expy{-1}
+		\end{equation}
+		per pianeta $5\mearth{}$ a \SI{5}{\astronomicalunit} si ha $\tau_I=\SI{0.5}{\mega\year}$.
+		
+		La migrazione di tipo II \'e caratterizzata da formazione di un gap attorno all'orbita del pianeta: la transizione tra migrazione I e II avviene se $R_H>H$ e momento torcente dovuto alla viscosit\'a del disco \'e minore del momento esercitato dal pianeta sul disco. La velocit\'a di migrazione di tipo II \'e determinata dall'evoluzione viscosa del disco:
+		\begin{equation}
+		\dot{a}_p=-\frac{3}{2}\frac{\nu}{r}
+		\end{equation}
+		Il momento esercitato sul pianeta dalla regione di corotazione pu\'o dar luogo a feedback positivo su pianeta di massa intermedia con velocit\'a radiale $\dot{a}_p$.
+	\end{errata}
+	
+	\item Interazione con disco residuo di planetesimi
+	
+	\item Interazione tra due o pi\'u pianeti giganti
+	
+	\item Interazione con stella in sistema di stelle binarie
+	
+	\item Interazione mareale con la stella
+	
+\end{itemize}
+
+\end{reworking}
+
 \begin{wrapfigure}[26]{l}{0.4\textwidth}
 \includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio, width=0.39\textwidth]{corotation}
 \caption{In alto: Orbite periodiche e librazione delle particelle di gas del disco. In basso: Asimmetrie tra gli U-turn che precedono/seguono il pianeta. Da \cite{armitage2007lecture}.}\label{fig:corotation}
