scenario core accretion at begginning

--- a/main.tex
+++ b/main.tex
@@ -125,6 +125,14 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 \end{errata}
 Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera l'instabilit\'a gravitazionale del disco protoplanetario.
 
+\begin{reworking}[Scenario core accretion]
+\begin{figure}[!ht]
+	\includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
+\end{figure}
+Il collasso di una nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
+L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
+\end{reworking}
+
 Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante per sistemi planetari attorno a stella singola di sequenza principale:
 \begin{itemize}
 \item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli%(la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
@@ -136,21 +144,15 @@ Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il pr
 \input{PFMconstraints}
 \cleartorecto
 
-{\let\clearpage\relax\let\cleardoublepage\relax
-\part{Formazione sistemi planetari: descrizione scenario core accretion}\label{part:CAdesc}
-}
-\begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
-\end{figure}
-Il collasso di una nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
-L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
-\input{CAdesc}
-\cleartorecto
+%{\let\clearpage\relax\let\cleardoublepage\relax
+%\part{Formazione sistemi planetari: descrizione scenario core accretion}\label{part:CAdesc}
+%}
+%\input{CAdesc}
+%\cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
 }
-
 
 \begin{errata}[planetary system diversity]
 Il variare delle caratteristiche dei sistemi planetari osservati \'e determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii e di metallicit\'a, tempo di vita, condizioni del cluster di cui fa parte il disco.
