dischi(osservazioni e modelli) in GFM

--- a/appendice.tex
+++ b/appendice.tex
@@ -1,6 +1,6 @@
 \chapter{Interazione disco-pianeta}
 
-\begin{reworking}{Fenomeni che causano migrazione}
+\begin{reworking}[Fenomeni che causano migrazione]
 	
 {Evoluzione orbite proto-pianeti: migrazione planetaria.}
 
