Nuova Part-izione: obs-GFM-synth&comparison

--- a/main.tex
+++ b/main.tex
@@ -144,11 +144,11 @@ Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il pr
 \input{PFMconstraints}
 \cleartorecto
 
-%{\let\clearpage\relax\let\cleardoublepage\relax
-%\part{Formazione sistemi planetari: descrizione scenario core accretion}\label{part:CAdesc}
-%}
-%\input{CAdesc}
-%\cleartorecto
+{\let\clearpage\relax\let\cleardoublepage\relax
+\part{Modelli di formazione globali e semplificazioni introdotte}\label{part:GFM}
+}
+\input{CAdesc}
+\cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
