--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,6 +1,6 @@
 % trim={5cm 0 0 0},clip
 
-{\let\clearpage\relax\let\cleardoublepage\relax
+{\let\clearpage\relax\let\cleardoublepage\relax\let\cleartorecto\relax
 \chapter{Sistema solare}
 }
 Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria. Infatti si hanno informazioni accurate sui pianeti e loro orbite e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica di campioni di roccia.
@@ -14,11 +14,13 @@ La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteorit
 
 Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in figura \ref{fig:Snebuladensity}. \cite{hayashi1981structure} ha determinato l'andamento della densit\'a di gas, ghiaccio e rocce:
 %$\Sigma\propto r\expy{-3/2}$.
+\begin{subequations}
 \begin{align}
 &\Sigma_{rock}=7.1(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=0.35-2.7\\
 &\Sigma_{rock+ice}=30(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=2.7-36\\
 &\Sigma_{gas}=\num{e3}(\frac{a}{\si{\astronomicalunit}})\expy{-3/2}\si{\gram\per\square\cm}:\ \frac{a}{\si{\astronomicalunit}}=0.35-36
 \end{align}
+\end{subequations}
 
 \begin{workout}[accrescimento di gas su nucleo solido prevede arricchimento di metalli ]
 
