--- a/main.tex
+++ b/main.tex
@@ -123,15 +123,18 @@ A partire dalla scoperta del primo esopianeta attorno a stella di sequenza princ
 \begin{errata}[tcniche osservative, effetti di selezione, diagrammi]
 Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$: quali osservabili determinano le diverse tecniche osservative, struttura pianeta (sistema solare, esopianeti).
 \end{errata}
-Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera l'instabilit\'a gravitazionale del disco protoplanetario.
 
-\begin{reworking}[Scenario core accretion]
+\begin{errata}[Intro scenario CS (prima di Sistema solare)]
+Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera l'instabilit\'a gravitazionale del disco protoplanetario.
+\end{errata}
+
+%\begin{reworking}[Scenario core accretion]
 \begin{figure}[!ht]
 	\includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
 \end{figure}
 Il collasso di una nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
-L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
-\end{reworking}
+L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA). Lo schema di formazione alternativo considera l'instabilit\'a gravitazionale del disco protoplanetario.
+%\end{reworking}
 
 Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante per sistemi planetari attorno a stella singola di sequenza principale:
 \begin{itemize}
