--- a/main.tex
+++ b/main.tex
@@ -113,6 +113,26 @@ I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Quel
 La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata sulla base dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
 \end{errata}
 
+\begin{workout}[comando]
+Mantengo una riserva generale: c'e' troppa roba; sembra un riassunto di
+appunti per un corso di almeno 20 ore.... Dovra' fare un lavoro molto
+impegnativo per scegliere che cosa raccontare nei ~30 minuti del
+seminario. Pero' non voglio farle perdere troppo tempo, e usiamo la sua
+versione come base, dopo pero' alcuni miglioramenti essenziali:
+
+- Figure e tabelle vanno spiegate bene; per esempio nella tab 1-1 che
+cosa e' MZtot?
+La fig. 1.3 non mi e' chiara
+Quale e' la differenza fra 1-4a e 1-4b?
+La figura 1-8 e' troppo piccola e non si capisce molto
+Le figure 2-3a e b (e analogamente le 3-3a e b) sono troppo piccole e
+la didascalia e' insufficiente
+
+correggere gli errori di battitura: es: kilometriche invece di
+chilometriche pag. 11
+
+\end{workout}
+
 % (\cite{lissauer1993planet}).
 L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene. Con l'accumularsi delle osservazioni l'ipotesi di formazione attraverso disco protoplanetario \'e stata confermata: la prima verifica a cui sono state sottoposte le teorie di formazione \'e il Sistem solare.
 A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
