--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -12,16 +12,13 @@
 %\chapter{N-body interactions inside proto disk}
 %}
 
-{\let\clearpage\relax\let\cleardoublepage\relax
-	\chapter{Modelli di formazione globali e semplificazioni introdotte}
-}
-(Da \cite{mordasini2009extrasolar}, \cite{mordasini2018planetary})
-
+\begin{reworking}[Capitalit\'a modelli end2end: Non considero descrizione migrazione]
 \begin{wrapfigure}[22]{l}{0.7\textwidth}
 	\includegraphics[trim={8cm 5cm 8cm 0},clip, keepaspectratio, width=0.7\textwidth]{GFM}
 	\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
 		Da \cite{benz2014planet}.}\label{fig:GFM}
 \end{wrapfigure}
+\end{reworking}
 
 La struttura del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di polvere, influenzata a sua volta dalla posizione dell'iceline ($H_2O$): \'e possibile tenere traccia della frazione di rocce o ghiacci accrescuti. L'interazione tra disco ed embrione che da luogo alla migrazione \'e determinata dalla struttura del disco e dalla massa del pianeta.
 
@@ -29,14 +26,18 @@ Una volta che il core dell'embrione planetario \'e abbastanza massiccio si forma
 
 La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare della massa e del raggio del pianeta.
 
-\begin{reworking}[Modello disco accrescimento e osservazioni]
+{\let\clearpage\relax\let\cleardoublepage\relax
+	\chapter{Disco di accrescimento e condizioni iniziali}
+}
+(Da \cite{mordasini2009extrasolar}, \cite{mordasini2018planetary})
+
+%\begin{reworking}[Modello disco accrescimento e osservazioni]
 	%{\let\clearpage\relax\let\cleardoublepage\relax
 	%	\chapter{Disco protoplanetario}
 	%}
-	
 	Il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 	
-	\section{Modello disco di accrescimento}
+\begin{reworking}[Struttura disco accrescimento: condizioni stazionarie]
 	%\revidenda
 	Nei modelli unidimensionali per disco di accrescimento si descrive il trasporto di momento angolare verso l'esterno introducendo la viscosit\'a aumentata $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: giustifico euristicamente la parametrizzazione della viscosit\'a del disco di accrescimento in analogia alla viscosit\'a molecolare (\cite{bouvier2002theory}).
 	
@@ -96,10 +97,12 @@ La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare dell
 	\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r \TDy{r}{\Omega}
 	\end{equation}
 	
+\begin{workout}[Soluzione self-similar]
 	\begin{wrapfigure}[17]{l}{0.5\textwidth}
-		\includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{selfsimilaralphadisk}
-		\caption{Soluzione equazione \eqref{eq:sigmaevol} per $\nu\propto r\expy{\gamma}$ con $\gamma=1$. Da \cite{armitage2007lecture}.}\label{fig:selfsimilaralphadisk}
-	\end{wrapfigure}
+	\includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{selfsimilaralphadisk}
+	\caption{Soluzione equazione \eqref{eq:sigmaevol} per $\nu\propto r\expy{\gamma}$ con $\gamma=1$. Da \cite{armitage2007lecture}.}\label{fig:selfsimilaralphadisk}
+\end{wrapfigure}
+\end{workout}
 	
 	Nei modelli di disco di accrescimento unidimensionali si parametrizza il trasporto di momento angolare ponendo
 	\begin{equation}
@@ -120,26 +123,27 @@ La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare dell
 	\frac{v_g^2}{r}=\frac{GM_*}{r^2}+\frac{1}{\rho}\TDy{r}{P}
 	\end{equation}
 	dove ho introdotto $v_g$ velocit\'a a cui il gas orbita attorno alla stella centrale.
+\end{reworking}
+
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.39\textwidth}
+\centering
+\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{SED-contours}
+\caption{Struttura dischi protoplanetari (flusso a $\lambda=\SI{880}{\micro\meter}$) e densit\'a spettrale. La linea tratteggiata viola indica la distribuzione di corpo nero della fotosfera stellare. Da \cite{andrews2010protoplanetary}.}\label{fig:SED-contours}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.55\textwidth}
+\includegraphics[trim={0cm 15cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{diskdensity}
+\caption{Densit\'a superficiale dischi protoplanetari osservati nella regione di Ophiuchus ricavata risolvendo modello disco di accrescimento che riproduca densit\'a spettrale di energia osservata. I rettangoli grigi indicano densit\'a superficiale per la MMSN nella regione di Saturno, Urano e Nettuno. Da \cite{andrews2010protoplanetary}.}\label{fig:diskdensity}
+\end{subfigure}
+\end{figure}
 	
-	\begin{figure}[!ht]
-		\begin{subfigure}[b]{0.39\textwidth}
-			\centering
-			\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{SED-contours}
-			\caption{Struttura dischi protoplanetari (flusso a $\lambda=\SI{880}{\micro\meter}$) e densit\'a spettrale. La linea tratteggiata viola indica la distribuzione di corpo nero della fotosfera stellare. Da \cite{andrews2010protoplanetary}.}\label{fig:SED-contours}
-		\end{subfigure}
-		~
-		\begin{subfigure}[b]{0.55\textwidth}
-			\includegraphics[trim={0cm 15cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{diskdensity}
-			\caption{Densit\'a superficiale dischi protoplanetari osservati nella regione di Ophiuchus ricavata risolvendo modello disco di accrescimento che riproduca densit\'a spettrale di energia osservata. I rettangoli grigi indicano densit\'a superficiale per la MMSN nella regione di Saturno, Urano e Nettuno. Da \cite{andrews2010protoplanetary}.}\label{fig:diskdensity}
-		\end{subfigure}
-	\end{figure}
+Attorno alle stelle giovani sovente si trovano strutture opache nel visibile ma otticamente sottili nelle onde infrarosse: risolvendo il modello di disco protoplanetario, avente come input la distribuzione della dimensione della polvere e rapporto gas/polvere, per riprodurre le caratteristiche spettrali e flusso termico osservati, note anche le caratteristiche della stella centrale, si determinano i parametri caratteristici del disco.
 	
-	Attorno alle stelle giovani sovente si trovano strutture opache nel visibile ma otticamente sottili nelle onde infrarosse: risolvendo il modello di disco protoplanetario, avente come input la distribuzione della dimensione della polvere e rapporto gas/polvere, per riprodurre le caratteristiche spettrali e flusso termico osservati, note anche le caratteristiche della stella centrale, si determinano i parametri caratteristici del disco.
-	
-	La figura (\subref{fig:SED-contours}) mostra le strutture attorno a stelle giovani del cluster Ophiuchus secondo profili di intensit\'a a \SI{880}{\micro\meter}. Se $\nu\propto r\expy{\gamma}$ una soluzione di \eqref{eq:sigmaevol} per $t=0$ \'e
-	\begin{equation}
-	\Sigma=(2-\gamma)\frac{M_d}{2\pi R_c^2}(\frac{r}{R_c})\expy{-\gamma}\Exp{-(\frac{r}{R_c})\expy{2-\gamma}}
-	\end{equation}
+La figura (\subref{fig:SED-contours}) mostra le strutture attorno a stelle giovani del cluster Ophiuchus secondo profili di intensit\'a a \SI{880}{\micro\meter}. Se $\nu\propto r\expy{\gamma}$ una soluzione di \eqref{eq:sigmaevol} per $t=0$ \'e
+\begin{equation}
+\Sigma=(2-\gamma)\frac{M_d}{2\pi R_c^2}(\frac{r}{R_c})\expy{-\gamma}\Exp{-(\frac{r}{R_c})\expy{2-\gamma}}
+\end{equation}
 	\cite{andrews2010protoplanetary} hanno osservato lo spettro emesso da oggetti nella regione di formazione stellare Ophiuchus determinando massa, dimensioni caratteristiche e viscosit\'a: $M_d=0.004-0.143\msun{}$, $\gamma=0.4-1.1$, $R_c=\SIrange{14}{198}{\astronomicalunit}$.
 	
 	\begin{wrapfigure}[6]{l}{0.5\textwidth}
@@ -151,11 +155,9 @@ La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare dell
 	In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con dischi protoplanetari in funzione dell'et\'a del cluster. \'E possibile stimare tempo di vita caratteristico del disco considerando andamento esponenziale per frazione di dischi: secondo (\cite{mamajek2009initial}) $\tau_c\approx\SI{2.5}{\mega\year}$, mentre (\cite{haisch2001disk}) hanno determinato $\tau_c\approx\SI{6}{\mega\year}$.
 	
 	\vspace{0.2\textheight}
-	
-\end{reworking}
 
 
-\section{Modello disco di accrescimento e distribuzione condizioni iniziali}
+\section{Condizioni iniziali}
 %Refs: Sec4 mordasini09
 %\cleardoublepage
 
@@ -175,12 +177,15 @@ Le variabili di montecarlo hanno distribuzione determinata dalle osservazioni.
 	Global model of planets formation and evolution: more detailed submodels
 \end{workout}
 
+\begin{errata}[Semplificazioni nelle descrizioni iniziali dei dischi di accrescimento]
 Il modello pi\'u semplice di disco di accrescimento usa distribuzione esponenziale per andamento densit\'a superficiale e temperature, assumendo disco otticamente sottile, e relazione $L_*\propto M_*^4$ di sequenza principale. Le lacune di questo modello sono
 \begin{itemize}
 	\item i dischi sono otticamente spessi con transizioni nell'opacit\'a
 	\item non \'e presente evoluzione temporale consistente
 \end{itemize}
+\end{errata}
 
+\begin{reworking}[condizioni iniziali: soluzione equazione viscosa]
 Modelli pi\'u recenti  risolvono l'equazione per l'evoluzione viscosa:
 \begin{align}
 &\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
@@ -192,6 +197,7 @@ La densit\'a superficiale iniziale \'e assunta essere:
 \Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
 \end{equation}
 dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
+\end{reworking}
 
 La distribuzione di massa e la frazione di dischi protoplanetari per ammassi stellari di et\'a diversa \'e mostrata in figura (\ref{fig:initdistro}). La massa \'e determinata misurando il flusso di emissione termica della polvere: la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana corrispondente a massa media $M_{disk}=0.042\msun{}$.
 
@@ -223,35 +229,37 @@ Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente co
 	4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
 \end{workout}
 
-\begin{reworking}[R\'evolutionne planetesimi e accrescimento solidi]
+
 	
-	\section{Sedimentazione polvere e formazione planetesimi}
+\chapter{Accrescimento planetesimi: formazione proto-pianeti.}
 	
-	La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter}: l'evoluzione del disco di polvere \'e determinata da attrazione della stella centrale e drag del gas.
-	
-	L'equazione del moto per particella di polvere \'e
-	\begin{equation}\label{eq:motiondust}
-	m_p\TDy{t}{\vec{v}}=\vec{F}_D-m_p\Omega^2z\hat{z}
-	\end{equation}
-	$\vec{F}_D$ \'e la forza esercitata dal gas sulla particella di polvere che si oppone al moto relativo con velocit\'a $v$
-	\begin{equation}
-	F_D=\frac{1}{2}C_D\pi s^2\rho_gv^2
-	\end{equation}
-	nel caso cammino libero medio delle molecole di gas sia maggiore delle dimensioni della particella $C_D=\frac{8}{3}\frac{v_{th}}{v_z}$ (Epstein drag) per particelle pi\'u grandi \'e funzione del numero di Reynold.
-	%La pressione non supporta i grani: troppo pesanti
-	
-	Per particelle di \SI{1}{\micro\meter} tempo di sedimentazione \'e $\SI{2e5}{\year}$, inoltre turbolenza e coagulazione delle particelle hanno un ruolo non banale.
-	%t=mv/F
-	
-	La velocit\'a relativa tra gas e polvere causa un drift verso la stella di quest'ultima massimo per particelle di \SIrange{0.01}{10}{\meter}  a \SI{1}{\astronomicalunit} con tempo caratteristico di \SI{100}{\year} (\cite{lissauer1993planet}).
-	
-	Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
-	\begin{itemize}
-		\item La componente solida del disco di accrescimento sedimenta rapidamente in disco sottile: secondo il modello di Goldreich-Ward il disco di polvere \'e instabile e le condensazioni generano i planetesimi.
-		\item In assenza di sedimentazione la formazione procede tramite urti a 2 corpi e la turbolenza creando addensamenti, pu\'o accelerare la formazione di planetesimi.
-	\end{itemize}
-	
-	\section{Accrescimento planetesimi: formazione proto-pianeti.}
+	\begin{reworking}[R\'evolutionne planetesimi e accrescimento solidi]
+		
+		\section{Sedimentazione polvere e formazione planetesimi}
+		
+		La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter}: l'evoluzione del disco di polvere \'e determinata da attrazione della stella centrale e drag del gas.
+		
+		L'equazione del moto per particella di polvere \'e
+		\begin{equation}\label{eq:motiondust}
+		m_p\TDy{t}{\vec{v}}=\vec{F}_D-m_p\Omega^2z\hat{z}
+		\end{equation}
+		$\vec{F}_D$ \'e la forza esercitata dal gas sulla particella di polvere che si oppone al moto relativo con velocit\'a $v$
+		\begin{equation}
+		F_D=\frac{1}{2}C_D\pi s^2\rho_gv^2
+		\end{equation}
+		nel caso cammino libero medio delle molecole di gas sia maggiore delle dimensioni della particella $C_D=\frac{8}{3}\frac{v_{th}}{v_z}$ (Epstein drag) per particelle pi\'u grandi \'e funzione del numero di Reynold.
+		%La pressione non supporta i grani: troppo pesanti
+		
+		Per particelle di \SI{1}{\micro\meter} tempo di sedimentazione \'e $\SI{2e5}{\year}$, inoltre turbolenza e coagulazione delle particelle hanno un ruolo non banale.
+		%t=mv/F
+		
+		La velocit\'a relativa tra gas e polvere causa un drift verso la stella di quest'ultima massimo per particelle di \SIrange{0.01}{10}{\meter}  a \SI{1}{\astronomicalunit} con tempo caratteristico di \SI{100}{\year} (\cite{lissauer1993planet}).
+		
+		Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
+		\begin{itemize}
+			\item La componente solida del disco di accrescimento sedimenta rapidamente in disco sottile: secondo il modello di Goldreich-Ward il disco di polvere \'e instabile e le condensazioni generano i planetesimi.
+			\item In assenza di sedimentazione la formazione procede tramite urti a 2 corpi e la turbolenza creando addensamenti, pu\'o accelerare la formazione di planetesimi.
+		\end{itemize}
 	
 	Assumiamo quindi che la polvere condensi in planetesimi con densit\'a superficiale $\Sigma_p$.
 	\subsection{Distribuzione velocit\'a planetesimi}
@@ -350,10 +358,53 @@ Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nell
 	Trapped evolution model: Hasegawa pudritz 11, Cridland 16
 \end{workout}
 
+\section{Caratteristiche iniziali degli embrioni planetarii e accrescimento}
+
+La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
+
+La massa dei core varia per l'accrescimento dei planetesimi secondo
+\begin{align}
+&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
+%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+\end{align}
+
+Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
+\begin{align}
+&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
+&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
+\end{align}
+dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
+
+\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
+	$b=10.4+\log{f}$
+\end{workout}
+
+\begin{workout}[Higher mass gap formation reduces accretion rate]
+	\begin{equation}
+	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
+	\end{equation}
+\end{workout}
+
+%\subsection{Descrizione della migrazione.}
+
+\begin{workout}[Descrizione della migrazione]
+	\begin{equation}
+	\TDy{t}{r}=f(p,q,p_{\nu},p_{\xi})\frac{M_p}{M_*}\frac{\Sigma r^2}{M_*}(\frac{r\Omega}{c_s})^2r\Omega
+	\end{equation}
+	dove
+	\begin{align}
+	&p(r)=\TDly{r}{\Sigma},\ q(r)=\TDly{r}{T},\ p_{\nu}=\frac{2}{3}\sqrt{\Rey{} x_s^3},\ p_{\chi}=\frac{3p_{\nu}}{2\sqrt{\Pra{}}}
+	\end{align}
+\end{workout}
+
+
 
 \begin{reworking}[Accrescimento di gas (Da CA)]
-	{Evoluzione struttura planetaria: accrescimento di gas.}
+\chapter{Evoluzione struttura planetaria: accrescimento di gas etc?.}
 	% e fase isolata
+	\begin{workout}[Interazione pianeta-pianeta e pianeta-disco]
+
+	\end{workout}
 	
 	\begin{wrapfigure}[15]{l}{0.5\textwidth}
 		\includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
@@ -490,46 +541,6 @@ Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nell
 	\end{workout}
 	
 \end{reworking}
-
-
-\section{Caratteristiche iniziali degli embrioni planetarii e accrescimento}
-
-La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
-
-La massa dei core varia per l'accrescimento dei planetesimi secondo
-\begin{align}
-&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
-%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
-\end{align}
-
-Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
-\begin{align}
-&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
-&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
-\end{align}
-dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
-
-\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
-	$b=10.4+\log{f}$
-\end{workout}
-
-\begin{workout}[Higher mass gap formation reduces accretion rate]
-	\begin{equation}
-	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
-	\end{equation}
-\end{workout}
-
-%\subsection{Descrizione della migrazione.}
-
-\begin{workout}[Descrizione della migrazione]
-	\begin{equation}
-	\TDy{t}{r}=f(p,q,p_{\nu},p_{\xi})\frac{M_p}{M_*}\frac{\Sigma r^2}{M_*}(\frac{r\Omega}{c_s})^2r\Omega
-	\end{equation}
-	dove
-	\begin{align}
-	&p(r)=\TDly{r}{\Sigma},\ q(r)=\TDly{r}{T},\ p_{\nu}=\frac{2}{3}\sqrt{\Rey{} x_s^3},\ p_{\chi}=\frac{3p_{\nu}}{2\sqrt{\Pra{}}}
-	\end{align}
-\end{workout}
 
 \begin{workout}[Migrazione mordasini 09]
 	La velocit\'a di migrazione calcolata per disco isotermo (\cite{tanaka2002}) \'e troppo rapida
