--- a/appendice.tex
+++ b/appendice.tex
@@ -1,4 +1,4 @@
-\begin{reworking}[Periodi-RV: spostare in appendice]
+\begin{reworking}[Periodi-RV (appendice)]
 	\begin{figure}[!ht]
 		\begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0cm 6cm 0 0},clip, width=0.98\textwidth]{freqvsPgiant}\caption{Frequenza pianeti con $M\geq 30\mearth{}$ in funzione del periodo orbitale; in rosso  tratteggiato con correzione bias osservativi. Da \cite{mayor2011harps}.}\label{fig:freqvsPgiant} \end{subfigure}
 		~
